--- a/homepage/style.css
+++ b/homepage/style.css
@@ -19,9 +19,11 @@
     display: flex;
     justify-content: flex-start;
     margin-left: 20px;
+    font-size: large;
 }
 
 .blogText{
     display: flex;
     justify-content: center;
+    font-size: larger;
 }
