--- a/blog-schreiben/schreiben-style.css
+++ b/blog-schreiben/schreiben-style.css
@@ -1,3 +1,64 @@
-.body{
-    background-color: black;
+.formular{
+    display: flex;
+    justify-content: center;
+    border: 2px solid black;
+    background-color: white;
+    margin-top: 75px;
+    height: 600px;
+    width: 800px;
+    border-radius: 20%;
+}
+
+.formularLayout{
+    display: flex;
+    justify-content: center;
+}
+
+#title{
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+}
+
+.inputBox{
+    height: 20px;
+    width: 150px;
+}
+
+.label{
+    font-size: medium;
+    font-style: normal;
+}
+
+.error-box {
+    color: red;
+    background-color: rgb(250, 220, 220);
+    border: 1px solid red;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.LayoutimFormular{
+    display: flex;
+    flex-direction: column;
+}
+
+.InputLayout{
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    height: 30px;
+}
+
+.TextBox{
+    height:200px;
+    width: 500px;
+}
+
+.btnPublish{
+    margin-top: 20px;
+    display: flex;
+    height: 30px;
+    width: 150px;
 }
