--- a/homepage/style.css
+++ b/homepage/style.css
@@ -47,13 +47,18 @@
     font-style:oblique;
 }
 
+.commentSection{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 .commentOption{
-    margin-left: 20px;
-    margin-top: 30px ;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .commentText{
-
 margin-left: 20px;
 margin-bottom: 20px;
 font-size: larger;
