--- a/andere-Blogseiten/andere-Blogseiten-Style.css
+++ b/andere-Blogseiten/andere-Blogseiten-Style.css
@@ -1,18 +1,20 @@
 .andereBlogs{
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     border: 2px solid black;
     background-color: white;
     width: 500px;
     height: 75px;
     margin-top: 30px;
     text-decoration: none;
-    color:black;
-    justify-content: center;
     font-size: xx-large;
+    color: black;
+    opacity: 0.8;
+    border-radius: 20px;
 }
 
-.otherBlogs{
+.layout{
     margin-top: 50px;
     display: flex;
     justify-content: center;
