--- a/vorlage/blog-vorlage.css
+++ b/vorlage/blog-vorlage.css
@@ -28,3 +28,21 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+.footer{
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    border-radius: 20px;
+    opacity: 0.8;
+    font-size: x-large;
+    width: 100%;
+    height: auto;
+    margin-bottom: 30px;
+    margin-top: 50px;
+}
+
+.footerFont{
+    margin-top: 30px;
+    margin-left: 20px;
+}
